# protocol-stack

./: .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  SECURITY.md
.agents/skills/change-protocol/: SKILL.md
.agents/skills/change-protocol/agents/: openai.yaml
.agents/skills/proceed-project/: SKILL.md
.agents/skills/proceed-project/agents/: openai.yaml
.agents/skills/verify-project/: SKILL.md
.agents/skills/verify-project/agents/: openai.yaml
.codex/: config.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  protocol-change.yml  work-item.yml
.github/workflows/: verify.yml
docs/: README.md
docs/architecture/: ledger-kernel.md  local-ai-authority.md  sovereign-core.md
docs/decisions/: 0001-sovereign-core-and-replaceable-consensus.md  0002-native-single-asset-economy.md  0003-ai-outside-consensus.md  0004-protocol-primitives-v1.md  0005-reproducible-build-toolchain.md  0006-m1-devnet-ledger-parameters.md  0007-sqlite-ledger-persistence.md
docs/engineering/: build-toolchain.md  continuation.md  git-workflow.md  standards.md  verification.md
docs/project/: charter.md  current-state.md  first-goal.md  roadmap.md  vision.md
docs/specifications/: ledger-transition-v1.md  protocol-primitives-v1.md
include/protocol/v1/: address.hpp  admission.hpp  crypto.hpp  ledger.hpp  types.hpp
src/v1/: address.cpp  admission.cpp  commitments.cpp  commitments.hpp  crypto.cpp  encoding.hpp  execution.cpp  execution.hpp  genesis.cpp  genesis.hpp  ledger.cpp
test-vectors/: ledger-transition-v1.txt  protocol-primitives-v1.txt
tests/differential/: cases.py  coverage.py  kernel_runner.cpp  model.py  pinned_sodium.py  protocol_bytes.py  random_cases.py  run.py  transcript.py
tests/fuzz/: address_fuzz.cpp  admission_fuzz.cpp  genesis_fuzz.cpp
tests/kernel/: admission_test.cpp  block_test.cpp  commitments_test.cpp  execution_test.cpp  genesis_test.cpp  primitives_test.cpp  property_test.cpp  restore_test.cpp
tests/storage/: sqlite_dependency_test.cpp
tools/: verify.sh
tools/ledger-vectors/: README.md  verify.cpp  verify.py
tools/protocol-vectors/: README.md  vector_common.hpp  vector_common.py  verify.cpp  verify.py  verify.sh
tools/toolchain/: requirements-linux-x86_64.txt
